# lol-crawler

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE-MIT  README.md  matchrecord.proto
.github/workflows/: release.yml
crates/desktop/: Cargo.toml  tauri.conf.json
crates/desktop/capabilities/: default.json
crates/desktop/src/: main.rs  mock.rs
crates/desktop/ui/: app.js  index.html  style.css
crates/node/: Cargo.toml
crates/node/src/: config.rs  events.rs  executor.rs  lib.rs  main.rs  ratelimit.rs  worker.rs
crates/proto/: Cargo.toml
crates/proto/src/: lib.rs
crates/server/: Cargo.toml
crates/server/src/: api.rs  broker.rs  columnar.rs  config.rs  crawler.rs  invites.rs  main.rs  metrics.rs  record.rs  registry.rs  riot.rs  stats.rs  storage.rs
docs/: columnar-recompaction.md  crawl-strategy.md  rate-limiting.md  releasing.md  storage.md
docs/experiments/columnar/: roundtrip.py  strip_seg.py  transpose_bench.rs
scripts/: release.sh
src/: config.rs  crawler.rs  inspect.rs  main.rs  metrics.rs  ratelimit.rs  record.rs  riot.rs  storage.rs
testdata/: match.json  timeline.json
