[package]
name = "crawler-desktop"
version = "0.1.0"
edition = "2024"
description = "Crawl Crew: Tauri desktop app wrapping the node core"
license.workspace = true
authors.workspace = true

[[bin]]
name = "crawler-desktop"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
crawler-node = { path = "../node" }
crawler-proto = { path = "../proto" }
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-notification = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time", "sync"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
