[package]
name = "crawler-node"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "crawler-node"
path = "src/main.rs"

[dependencies]
crawler-proto = { path = "../proto" }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal", "time", "sync"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "gzip"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dirs = "6"
